--- a/day2-profile/index.html
+++ b/day2-profile/index.html
@@ -16,5 +16,6 @@
         <li>Loves learning new things</li>
         <li>Coffee and code enthusiast</li>
     </ul>
+    <script src="script.js"></script>
 </body>
 </html>
