Responsive design, flexbox, and CSS grid practices

--- a/day2-profile/index.html
+++ b/day2-profile/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day 2 - My Profile Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Hello, I'm Soyam!</h1>
-    <p>Welcome to my 30-Day Coding Journey.</p>
-    <img src="https://via.placeholder.com/150" alt="Profile Picture">
-    <h2>About Me</h2>
-    <ul>
-        <li>Aspiring Full Stack Developer</li>
-        <li>Loves learning new things</li>
-        <li>Coffee and code enthusiast</li>
-    </ul>
-    <script src="script.js"></script>
+    <div class="profile-container">
+        <h1>Hello, I'm Soyam!</h1>
+        <p>Welcome to my 30-Day Coding Journey.</p>
+        <img src="https://via.placeholder.com/150" alt="Profile Picture">
+        <h2>About Me</h2>
+        <ul>
+            <li>Aspiring Full Stack Developer</li>
+            <li>Loves learning new things</li>
+            <li>Coffee and code enthusiast</li>
+        </ul>
+        <script src="script.js"></script>
+    </div>
 </body>
+
 </html>
